[project]
name = "sandisk-2026-01jan-04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitautopush>=0.4.1",
    "ipyparallel>=9.0.2",
    "jupyter>=1.1.1",
    "jupyter-core>=5.9.1",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
]
